# loosh-farm

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: main.py
src/collectors/: __init__.py  base.py  reddit_collector.py  rss_collector.py
src/models/: __init__.py  emotion.py  sentiment.py  topics.py
src/outputs/: __init__.py  console_writer.py  csv_writer.py  json_writer.py  snapshot.py
src/processors/: __init__.py  cleaner.py  dedup.py  pipeline.py
src/scoring/: __init__.py  aggregator.py  loosh_index.py
tests/: test_cleaner.py  test_dedup.py  test_emotion.py  test_scoring.py  test_sentiment.py  test_topics.py
